Padding fix for the footer on mobile

--- a/src/App/Components/Footer/Footer.css
+++ b/src/App/Components/Footer/Footer.css
@@ -36,7 +36,7 @@
 @media screen and (max-width: 1000px) {
     .footer {
         width: auto;
-        margin: 20px;
+        padding: 20px;
     }
 
     .footer > div {
